Make rb_eval_string_wrap specify a cref so constant setting works correctly

Fixes [Bug #10466]